--- a/styles.css
+++ b/styles.css
@@ -230,11 +230,11 @@
   top: 0;
   left: 0;
   border-radius: 10px;
-  background: linear-gradient(
+  /* background: linear-gradient(
     rgba(225, 0, 0, 1) 0%,
     rgba(225, 0, 2, 1) 50%,
     rgba(225, 0, 0, 1) 85%
-  );
+  ); */
   z-index: 5;
 }
 
